# learn_pytest

./: evenodd.py  pyproject.toml
.github/workflows/: python-tests.yml
tests/: test_evenodd.py
